--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,6 +30,8 @@ eggs =
     Paste
     PasteScript
     PasteDeploy
+    Mako
+    Flask-Mako
 
 interpreter = python-console
 
@@ -84,7 +86,10 @@ output = ${buildout:parts-directory}/etc/debug.cfg
 
 [test]
 recipe = pbp.recipe.noserunner
-eggs = presence_analyzer
+eggs =
+    presence_analyzer
+    Mako
+    Flask-Mako
 defaults = -v
 
 
