Implemented avatars and updating xml file.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,14 +2,15 @@
 develop = .
 parts =
     app
-    mkdirs
     deploy_ini
     deploy_cfg
     debug_ini
     debug_cfg
-    test
+    mkdirs
     pep8
     pylint
+    test
+    update_users_xml
 
 newest = false
 versions = versions
@@ -32,6 +33,7 @@ eggs =
     PasteDeploy
     Mako
     Flask-Mako
+    lxml
 
 interpreter = python-console
 
@@ -70,6 +72,8 @@ input = inline:
     # Deployment configuration
     DEBUG = False
     DATA_CSV = "${buildout:directory}/runtime/data/sample_data.csv"
+    DATA_XML = "${buildout:directory}/runtime/data/users.xml"
+    XML_URL = "http://sargo.bolt.stxnext.pl/users.xml"
 
 output = ${buildout:parts-directory}/etc/deploy.cfg
 
@@ -80,6 +84,8 @@ input = inline:
     # Debugging configuration
     DEBUG = True
     DATA_CSV = "${buildout:directory}/runtime/data/sample_data.csv"
+    DATA_XML = "${buildout:directory}/runtime/data/users.xml"
+    XML_URL = "http://sargo.bolt.stxnext.pl/users.xml"
 
 output = ${buildout:parts-directory}/etc/debug.cfg
 
@@ -90,6 +96,7 @@ eggs =
     presence_analyzer
     Mako
     Flask-Mako
+    lxml
 defaults = -v
 
 
@@ -102,6 +109,12 @@ scripts = pep8
 initialization = sys.argv.extend(${pep8:dirs})
 
 
+[update_users_xml]
+recipe = z3c.recipe.usercrontab
+times = * * * * *
+command = ${buildout:directory}/bin/update_xml
+
+
 [pylint]
 recipe = zc.recipe.egg
 eggs =
@@ -111,3 +124,5 @@ scripts = pylint
 entry-points = pylint=pylint.lint:Run
 dirs = ['${buildout:directory}/src/presence_analyzer']
 initialization = sys.argv.extend(${pylint:dirs})
+arguments = sys.argv[1:]+['--output-format=parseable','presence_analyzer']
+
