Implemented caching and multithreading.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,9 +31,9 @@ eggs =
     Paste
     PasteScript
     PasteDeploy
-    Mako
-    Flask-Mako
+    flask_mako
     lxml
+    mock
 
 interpreter = python-console
 
@@ -94,9 +94,9 @@ output = ${buildout:parts-directory}/etc/debug.cfg
 recipe = pbp.recipe.noserunner
 eggs =
     presence_analyzer
-    Mako
-    Flask-Mako
+    flask_mako
     lxml
+    mock
 defaults = -v
 
 
@@ -118,11 +118,11 @@ command = ${buildout:directory}/bin/update_xml
 [pylint]
 recipe = zc.recipe.egg
 eggs =
+    lxml
     pylint
     presence_analyzer
 scripts = pylint
 entry-points = pylint=pylint.lint:Run
 dirs = ['${buildout:directory}/src/presence_analyzer']
 initialization = sys.argv.extend(${pylint:dirs})
-arguments = sys.argv[1:]+['--output-format=parseable','presence_analyzer']
-
+arguments = sys.argv[1:]+['--output-format=parseable','presence_analyzer','--extension-pkg-whitelist=lxml']
